--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
         fetch-depth: 0
     - uses: pixta-dev/repository-mirroring-action@v1
       with:
-        target_repo_url: https://github.com/EpitechPromo2027/B-CNA-410-NAN-4-1-trade-adam.lesage.git
+        target_repo_url: git@github.com:EpitechPromo2027/B-CNA-410-NAN-4-1-trade-adam.lesage.git
         ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
