--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - run: python3 trade.py < .github/workflows/quit-file.txt
+    - run: python3 ./src/main.py < .github/workflows/quit-file.txt
       timeout-minutes: 1
   push_to_mirror:
     needs:
