--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,23 @@ jobs:
         fetch-depth: 0
     - run: python3 ./src/main.py < .github/workflows/quit-file.txt
       timeout-minutes: 1
-  push_to_mirror:
+  run_tests:
     needs:
       - check_program_exit_status
+    runs-on: ubuntu-latest
+    container:
+      image: epitechcontent/epitest-docker:latest
+      options: --privileged
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - run: |
+        ./tests/script_tester.sh
+      timeout-minutes: 1
+  push_to_mirror:
+    needs:
+      - run_tests
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
